# a-map-back-to-myself

./: .env.example  .gitignore  AGENT_RULES.md  README.md  app.py  hello.py  pyproject.toml
app/: __init__.py  cbt_bias_agent.py  cli.py  demo_corpus.py  document_importer.py  evidence_builder.py  evidence_planner.py  gemini_client.py  gemini_gate.py  graph_builder.py  memory_store.py  output_guard.py  privacy.py  prompt_builder.py  reflection.py  retriever.py  safety.py  schemas.py  ui.py
data/: cbt_cards.json  seed_memories.readonly.json
docs/: bdd_scenarios.md  cbt_theory_base.md  eval_plan.md  privacy_policy.md  product_spec.md  safety_policy.md  technical_spec.md
eval/: eval_cases.json  eval_runner.py  privacy_eval_cases.json
imports/: .gitkeep  sample_journal.docx  sample_reflection.txt
imports/demo_mira/docx/: mira_021_archive_work_log.docx  mira_022_studio_journal.docx  mira_023_presentation_practice_log.docx  mira_024_portfolio_reflection.docx  mira_025_friend_feedback.docx
imports/demo_mira/md/: mira_026_archive_work_log.md  mira_027_studio_journal.md  mira_028_selfmap_reflection_note.md  mira_029_process_note.md  mira_030_evening_journal.md
imports/demo_mira/txt/: mira_001_morning_journal.txt  mira_002_archive_work_log.txt  mira_003_studio_journal.txt  mira_004_critique_reflection.txt  mira_005_learning_log.txt
