[project]
name = "selfmap-agent"
version = "0.1.0"
description = "Selfmap Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "python-docx>=1.1.0",
    "networkx>=3.0",
    "click>=8.0.0",
    "streamlit>=1.30.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
]


